HT1/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ht1-service
  namespace: so1-ht1
spec:
  selector:
    app: ht1-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
